Don't use ./ or globs, use exec plugin for ingestor, other clarifications